--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-    "name": "translate",
-    "version": "0.0.1",
-    "description": "Translator Page",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [
-      "nodejs",
-      "handlebars",
-      "expressjs"
-    ],
-    "author": "Georg Wresnik",
-    "license": "GPL-2.0",
-    "dependencies": {
-      "body-parser": "^1.18.2",
-      "cookie-parser": "^1.4.3",
-      "express": "^4.16.2",
-      "express-session": "^1.15.6",
-      "handlebars": "^4.0.11",
-      "amqplib" : "^0.5.2",
-      "formidable": "^1.0.17"
-    }
+  "name": "translate",
+  "version": "0.0.1",
+  "description": "Translator Page",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "nodejs",
+    "handlebars",
+    "expressjs"
+  ],
+  "author": "Georg Wresnik",
+  "license": "GPL-2.0",
+  "dependencies": {
+    "async": "^2.6.1",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "handlebars": "^4.0.11",
+    "amqplib": "^0.5.2",
+    "formidable": "^1.0.17",
+    "read-yaml": "^1.1.0",
+    "request": "^2.87.0",
+    "sqlite3": "^4.0.1"
   }
-  
+}
