--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "read-yaml": "^1.1.0",
     "request": "^2.87.0",
     "sqlite3": "^4.0.1",
-    "websocket": "^1.0.26"
+    "websocket": "^1.0.26",
+    "websockets": "^0.2.0",
+    "jquery": "3.3.1"
   }
 }
